src/app/pages/services-page/components/services-navigator/services-navigator.component.scss
@import "stylesheets/tools/colors";

.component-wrapper {
  position: relative;
  min-height: 200px;
  padding: 70px 0;
  background: theme-colors('primary') url('/assets/img/texture_tooth_for_green.png');
}

h2 {
  color: white;
  text-align: center;
}

.flex-row {
  position: relative;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  margin: 30px 60px;
}

.flex-item {
  width: 100%;
  height: 140px;
  margin: 0 1px;
  font-size: 0.8rem;
  text-align: center;
  text-decoration: none;
  color: #333333;
  background-color: white;

  &.active, &:hover {
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  }

  &.active {
    z-index: 10;
    transform: scale(1.1);
  }

  &:hover {
    z-index: 11;
    transform: scale(1.14);
  }
}

.icon {
  width: 64px;
  height: 64px;
  margin: 20px auto 10px;
}

